# helloc

./: .gitignore  CMakeLists.txt  README.md  main.c
array/: array.c  array_apply.c  array_char.c  array_memory.c  array_two_dim.c
common_function/: date_func.c  math_func.c  memory_func.c  string_func.c
flow_control/: branch_structure.c  loop_structure.c  sequential_structure.c
function/: function_call_back.c  function_concept.c  function_extern.c  function_func_point.c  function_main.c  function_point.c  function_prototype.c  function_static.c  function_static_extern.c  function_var_trans.c  function_variable_args.c
helloc/: operator.c  scale.c  testc.c
io/: file_input.c  file_output.c  terminalIO.c
keyword/: typedef_use.c
point/: point_array.c  point_char.c  point_define.c  point_operation.c  point_two_level.c  pointer_wild.c
struct/: struct_array.c  struct_arrow.c  struct_concept.c  struct_memory.c  struct_nest.c  struct_point.c  struct_trans.c
union/: union_concept.c
variable/: variable.c  variable_const.c  variable_dynamic_static.c  variable_local_global.c  variable_register.c
