cmake_minimum_required(VERSION 3.27)
project(helloc C)

set(CMAKE_C_STANDARD 99)

add_executable(testc helloc/testc.c)
add_executable(main main.c)
add_executable(variable variable/variable.c)
add_executable(terminalIO io/terminalIO.c)
add_executable(scale helloc/scale.c)
add_executable(operator helloc/operator.c)
add_executable(branch_structure flow_control/branch_structure.c)
add_executable(loop_structure flow_control/loop_structure.c)
add_executable(sequential_structure flow_control/sequential_structure.c)
add_executable(array array/array.c)
add_executable(array_memory array/array_memory.c)